--- a/pom.xml
+++ b/pom.xml
@@ -10,8 +10,31 @@
     <name>avro-schema-generator</name>
     <url>http://maven.apache.org</url>
 
+    <parent>
+        <groupId>com.olacabs</groupId>
+        <artifactId>ola-libs-master-pom</artifactId>
+        <version>0.0.5</version>
+    </parent>
+
+    <repositories>
+        <repository>
+            <id>releases</id>
+            <name>Releases</name>
+            <url>http://artifactory.corp.olacabs.com:8080/artifactory/libs-release-local</url>
+        </repository>
+    </repositories>
+
+    <scm>
+        <connection>scm:git:ssh://git@gitlab.corp.olacabs.com:2222/dataplatform/avro-schema-generator.git</connection>
+        <url>scm:git:ssh://git@gitlab.corp.olacabs.com:2222/dataplatform/avro-schema-generator.git</url>
+        <developerConnection>scm:git:https://gitlab.corp.olacabs.com/dataplatform/avro-schema-generator.git
+        </developerConnection>
+        <tag>HEAD</tag>
+    </scm>
+
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+
     </properties>
 
     <dependencies>
@@ -42,19 +65,38 @@
             <version>2.5.0</version>
         </dependency>
     </dependencies>
+
+    <reporting>
+        <plugins>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>cobertura-maven-plugin</artifactId>
+                <version>2.7</version>
+                <configuration>
+                    <instrumentation>
+                        <ignoreTrivial>true</ignoreTrivial>
+                    </instrumentation>
+                    <check />
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>findbugs-maven-plugin</artifactId>
+                <version>3.0.1</version>
+                <configuration>
+                    <failOnError>false</failOnError>
+                    <effort>Max</effort>
+                    <!-- Reports all bugs (other values are medium and max) -->
+                    <threshold>Low</threshold>
+                    <!-- Produces XML report -->
+                    <xmlOutput>true</xmlOutput>
+                </configuration>
+            </plugin>
+        </plugins>
+    </reporting>
+
     <build>
     <plugins>
-    <!--<plugin>-->
-    <!--<artifactId>maven-dependency-plugin</artifactId>-->
-    <!--<executions>-->
-    <!--<execution>-->
-    <!--<phase>compile</phase>-->
-    <!--<goals>-->
-    <!--<goal>copy-dependencies</goal>-->
-    <!--</goals>-->
-    <!--</execution>-->
-    <!--</executions>-->
-    <!--</plugin>-->
     <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
